* Lowest priority downloads are no longer started if there are other downloads running
* Upgraded to STLport 5.0.2
* Updated compile instructions
* Updated unsigned types to C99
* Removed unmaintained autoconf files
* Reworked match listing to make it slightly faster
* Fixed a few random crashes
* [ADC] Removed obsolete DSC command
* Fixed user list not being updated in some cases

-- 0.697 2006-09-29 --
* [ADC] Fixed a few protocol issues
* Some code cleanup
* Queue frame fixes and memory saves
* TLS port change without restart fixed
* [bug 1007] Fixed nick character check
* Fixed some transfer view sorting issues
* [bug 59] Added option to match all local lists

-- 0.696 2006-09-22 --
* Fixed a possible deadlock
* [bug 1058] Removed some whitespace (big thanks to pothead)
* Removed the possibility to download files without TTH
* Removed the possibility to read *.DcLst files (no TTH, no i18n support)
* Files with no TTH no longer show up in search and directory listings
* Sources in the queue with no TTH support will no longer appear
* Files without TTH in the queue will be removed (finish downloads with an older version)
* [ADC] Fixed support for uncompressed files.xml as well as proper files.xml.bz2 support
* Some socket code cleanup
* Removed broken nick save code
* Upgraded yaSSL to 1.4.0
* Fixed some SSL connection issues
* Fixed on-the-fly compression of file lists
* [bug 1055] Stopped files.xml.bz2 from being deleted on linux (thanks dorian)
* [bug 1061] Log page fix (thanks fleetcommand)
* [bug 1033] Altered NMDC hubname/description detection slightly (thanks fleetcommand)
* [bug 1059] Fixed the possibility for users to become hidden in some cases (thanks fleetcommand)

-- 0.695 2006-09-10 --
* PM popup/ignore options updated, in nmdc a hub is any nick which hasn't sent a hello or myinfo, and a bot is a nick with myinfo
  without connection type
* [bug 125] Fixed out-of-order PM/quit